fix subskills grid-gap remove languages add subskills

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -151,7 +151,7 @@ img {
     .skills {
       display: grid;
       grid-template-columns: repeat(5, 1fr);
-      grid-gap: 1.5rem;
+      grid-gap: 1.4rem;
       text-align: center;
 
       a {
